--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
 
     <script>
         // **هام جداً: قم بتحديث هذا المتغير ليتطابق مع النطاق العام لسيرفر Node.js الخاص بك**
-        const NODE_SERVER_BASE_URL = "https://your-actual-node-server-domain.com";
-
+        const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-0a6b-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev";
         const phoneSection = document.getElementById('phoneSection');
         const loginSection = document.getElementById('loginSection');
         const phoneNumberInput = document.getElementById('phoneNumber');
