--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مرحباً بك في شات البنات! 🌸</title>
+    <title>مرحباً بكي شات البنات! 🌸</title>
     <style>
         /* ... (كل أكواد الـ CSS هنا تبدو سليمة ولا تؤثر على الوظيفة) ... */
         body {
