--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <script>
         // **هام جداً: هذا المتغير يجب أن يتطابق مع النطاق العام لسيرفر Node.js الخاص بك**
-        const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-a0e7-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev";
+        const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-a0e7-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev/";
         const phoneSection = document.getElementById('phoneSection');
         const loginSection = document.getElementById('loginSection');
         const phoneNumberInput = document.getElementById('phoneNumber');
