--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     <script>
         // **هام جداً: هذا المتغير يجب أن يتطابق مع النطاق العام لسيرفر Node.js الخاص بك في Replit **
         // **مع الشرطة المائلة في النهاية /**
-        // مثال: https://your-replit-name.repl.co/
-        // يجب أن تتأكدي من هذا الرابط كلما تغير في Replit
+        // تأكدي من هذا الرابط كلما تغير في Replit
         const REPLIT_SERVER_URL = "https://2d0146b2-69f8-4294-a0e7-9f8c291db932-00-1p81zuprc3lo0.spock.replit.dev/"; 
 
         const phoneSection = document.getElementById('phoneSection');
